dhall/tests/type-inference/failure/unit/CompletionWithWrongFieldName.txt
Type error: error: annot mismatch: { id : Optional Natural, nam : Text, name : Text } != { id : Optional Natural, name : Text }
 --> <current file>:1:5
  |
...
6 | in  Example::{ nam = "John Doe" }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ annot mismatch: { id : Optional Natural, nam : Text, name : Text } != { id : Optional Natural, name : Text }
  |
